# ANNetz

./: .gitignore  ANNetz.cbp  ANNetz.depend  ANNetz.layout  ANNetz.lnk  ANNetz.sln  CMakeLists.txt  Connection.cpp  Connection.h  Makefile  Network.cpp  Network.h  Neuron.cpp  Neuron.h  README.md  Utility.cpp  headers.h  main.cpp
ANN_data/: index.txt
ANNetz/: ANNetz.VC.opendb  ANNetz.aps  ANNetz.cpp  ANNetz.sdf  ANNetz.vcxproj  ANNetz.vcxproj.filters  Connection.cpp  Network.cpp  Network.h  Neuron.cpp  Neuron.h  ReadMe.txt  Utility.cpp  Utility.h  main.cpp
ANNetz/ANNetz/: ANNetz.cpp  ANNetz.vcxproj  ANNetz.vcxproj.filters  Connection.h  Network.cpp  Network.h  Neuron.cpp  Utility.cpp  Utility.h  stdafx.cpp
AnnData/: Index.txt
Debug/: ANNetz.ilk  vc141.idb
Debug/ANNetz.tlog/: ANNetz.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Project Files/: ANNetz.sln
Project Files/ANNetz/: ANNetz.vcxproj  ANNetz.vcxproj.filters  BATLayer.cpp  BATLayer.h  BATNet.cpp  BATNet.h  BATNode.cpp  BATNode.h  Component.cpp  Component.h  ComponentManager.cpp  ComponentManager.h  Connection.cpp  Connection.h  DXFramework.cpp  Filter.cpp  (+18 more)
UML/: Diagramm1.dia
include/: Neuron.h  Utility.h  headers.h
src/: Component.h  ComponentManager.cpp  ComponentManager.h  Connection.cpp  Connection.h  Filter.cpp  Filter.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  PassThrough.cpp  PassThrough.h  Pooling.cpp  Pooling.h  Utility.cpp  Utility.h  main.cpp  resource.h
(+6 files in other folders)
